Bug #244722 --> Message truncated in headers stops mail from automatically moving all junk messages

Patch by Lorenzo Colitti

sr=mscott